PR/50187: Don't use DS parameter set when 5GHz channel is scanning.

XXX: pullup-7